--- a/Views/Page1/Index.cshtml
+++ b/Views/Page1/Index.cshtml
@@ -25,16 +25,8 @@
             margin-top: 25px;
         }
 
-        h1 {
-            font-size: 1.2em;
-            margin: .6em 0;
-        }
-
-        .ui-dialog .ui-state-error {
-            padding: .3em;
-        }
-
-        .validateTips {
+        .validateTips,
+        .validateDialogTips {
             border: 1px solid transparent;
             padding: 0.3em;
         }
@@ -43,6 +35,7 @@
             color: red;
         }
     </style>
+
     <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
     <script src="https://code.jquery.com/ui/1.13.3/jquery-ui.js"></script>
     <script>
@@ -52,20 +45,23 @@
                 email = $("#email"),
                 dish = $("#dish"),
                 tips = $(".validateTips"),
+                dialogTips = $(".validateDialogTips"),
                 dishName = $("#dish-name"),
                 dishList = {};
 
-            function updateTips(t) {
-                tips.text(t).addClass("ui-state-highlight");
-                setTimeout(function () {
-                    tips.removeClass("ui-state-highlight", 1500);
-                }, 500);
+            function updateTips(element, t) {
+                element.text(t).addClass("error");
+            }
+
+            function clearTips(element) {
+                element.removeClass("error").text("");
             }
 
             function addDish() {
                 var valid = true;
                 dishName.removeClass("ui-state-error");
-                updateTips("");
+                clearTips(tips);
+                clearTips(dialogTips);
 
                 var newDish = { Name: dishName.val() };
 
@@ -80,13 +76,12 @@
                     },
                     error: function (jqXHR) {
                         dishName.addClass("ui-state-error");
-                        updateTips(jqXHR.responseText);
+                        updateTips(dialogTips, jqXHR.responseText);
                     }
                 });
 
                 return valid;
             }
-
 
             dishDialog = $("#dish-dialog-form").dialog({
                 autoOpen: false,
@@ -102,7 +97,7 @@
                 close: function () {
                     dishForm[0].reset();
                     dishName.removeClass("ui-state-error");
-                    tips.removeClass("error").text("");
+                    clearTips(dialogTips);
                 }
             });
 
@@ -112,10 +107,11 @@
             });
 
             $("#add-dish").button().on("click", function () {
+                dishName.removeClass("ui-state-error");
+                clearTips(tips);
                 dishDialog.dialog("open");
             });
 
-            
             $("#tell-food").button().on("click", function () {
                 if (name.val() && email.val() && dish.val()) {
                     var formData = {
@@ -135,24 +131,28 @@
                             }
                         },
                         error: function (jqXHR) {
-                            updateTips(jqXHR.responseText);
+                            clearTips(tips);
+                            updateTips(tips, jqXHR.responseText);
                         }
                     });
                 } else {
-                    if (!name.val()) {
-                        updateTips("Name - пустое поле.");
+                    if (!name.val() && !email.val()) {
+                        updateTips(tips, "Name и Email - обязательные поля.");
                     } else if (!email.val()) {
-                        updateTips("Email - пустое поле.");
+                        updateTips(tips, "Email - обязательное поле.");
+                    } else if (!name.val()) {
+                        updateTips(tips, "Name - обязательное поле.");
                     }
                 }
             });
 
         });
     </script>
+
 </head>
 <body>
     <div id="food-form">
-        <p class="validateTips">All form fields are required.</p>
+        <p class="validateTips"></p>
         <form>
             <fieldset>
                 <label for="name">Name</label>
@@ -163,7 +163,7 @@
                 <select name="dish" id="dish" class="ui-widget-content ui-corner-all">
                     @foreach (var food in ViewBag.FoodList)
                     {
-                            <option value="@food.Id">@food.Name</option>
+                        <option value="@food.Id">@food.Name</option>
                     }
                 </select>
                 <button type="button" id="add-dish">Добавить новое блюдо</button>
@@ -173,7 +173,7 @@
     </div>
 
     <div id="dish-dialog-form" title="Add new dish">
-        <p class="validateTips">All form fields are required.</p>
+        <p class="validateDialogTips"></p>
         <form>
             <fieldset>
                 <label for="dish-name">Dish Name</label>
